--- a/webChatClient/contact.html
+++ b/webChatClient/contact.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 <head>
-    <title>Chat</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -20,27 +20,11 @@
             <li><a class="menu__item" href="cypher.html">Cypher</a></li>
             <li><a class="menu__item" href="contact.html">Contact</a></li>
             <li><a class="menu__item" href="about.html">About</a></li>
-            <a id="keyElement" class="key-element menu__item"></a>
         </ul>
     </div>
 </header>
   
 <body>
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-          <h2>Set Your Sender Name</h2>
-          <div class="input-container">
-            <input type="text" id="senderNameInput" placeholder="Enter Your Name">
-          </div>
-          <button id="setSenderNameBtn" class="md-button">Set</button>
-        </div>
-      </div>
-      
-    <div id="chatContainer">
-        <h1>Chat Application</h1>
-        <div id="viewMessages"></div>
-        <input type="text" id="inputSend" placeholder="Type your message">
-        <button id="sendBtn">Send</button>
-    </div>
+    
 </body>
 </html>
