--- a/webChatClient/cypher.html
+++ b/webChatClient/cypher.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 <head>
-    <title>My Chat Application</title>
+    <title>Cypher</title>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -18,8 +18,8 @@
         <ul class="menu__box">
             <li><a class="menu__item" href="index.html">Chat</a></li>
             <li><a class="menu__item" href="cypher.html">Cypher</a></li>
-            <li><a class="menu__item" href="#">Contact</a></li>
-            <li><a class="menu__item" href="#">About</a></li>
+            <li><a class="menu__item" href="contact.html">Contact</a></li>
+            <li><a class="menu__item" href="about.html">About</a></li>
         </ul>
     </div>
 </header>
