--- a/webChatClient/index.html
+++ b/webChatClient/index.html
@@ -39,8 +39,10 @@
     <div id="chatContainer">
         <h1>Chat Application</h1>
         <div id="viewMessages"></div>
-        <input type="text" id="inputSend" placeholder="Type your message">
-        <button id="sendBtn">Send</button>
+        <div id="input-container">
+          <input type="text" id="inputSend" placeholder="Type your message">
+          <button id="sendBtn">Send</button>  
+        </div>
     </div>
 </body>
 </html>
