--- a/webChatClient/index.html
+++ b/webChatClient/index.html
@@ -24,6 +24,10 @@
             <li><a class="menu__item" href="contact.html">Contact</a></li>
             <li><a class="menu__item" href="about.html">About</a></li>
             <a id="keyElement" class="key-element menu__item"></a>
+
+            <h1>Search and Send Key</h1>
+            <input type="text" id="senderNameInput" placeholder="Enter Sender Name">
+            <button id="sendKeyButton">Send Key and IV</button>
             
             <div class="switch">
               <input type="checkbox" id="darkModeToggle">
