rsaA -> rsaB -> rsaA1 -> XXX rsaB1
fail on the last part, WHY DOES PRIVATE KEY NOT DECRYPT IT!?!?!?

--- a/webChatClient/index.html
+++ b/webChatClient/index.html
@@ -24,10 +24,9 @@
             <li><a class="menu__item" href="contact.html">Contact</a></li>
             <li><a class="menu__item" href="about.html">About</a></li>
             <a id="keyElement" class="key-element menu__item"></a>
-
-            <h1>Search and Send Key</h1>
-            <input type="text" id="senderNameInput" placeholder="Enter Sender Name">
-            <button id="sendKeyButton">Send Key and IV</button>
+            <div id="recipientPublicKeyField" class="public-key-field">
+              <span class="public-key-value">Recipient's Public Key</span>
+            </div>
             
             <div class="switch">
               <input type="checkbox" id="darkModeToggle">
